# localQTL

./: .gitignore  .readthedocs.yaml  README.md  nominal_test.sh  pyproject.toml
docs/: conf.py  index.rst  localqtl.rst  requirements.txt
src/localqtl/: __init__.py  _torch_utils.py  cis.py  coloc.py  common.py  common.py~  core.py  finemap.py  genotypeio.py  haplotypeio.py  independent.py  independent.py~  iosinks.py  nominal.py~  permutations.py  permutations.py~  pgen.py  phenotypeio.py  postproc.py  preproc.py  regression_kernels.py  stats.py  susie.py  utils.py
src/localqtl/cis/: _buffer.py  _permute.py  common.py  independent.py  mapper.py  nominal.py  permutations.py  postproc.py
tests/: bench_haps.py  bench_independent.py  bench_nominal.py  bench_permutations.py  conftest.py  haps_test.sh  independent_test.sh  nominal_test.sh  permutations_test.sh  test_coloc.py  test_genotypeio.py  test_haplotypeio.py  test_pgen.py  test_phenotypeio.py  test_regression_kernels.py  test_susie.py
tests/cis/: test_common.py  test_independent.py  test_init.py  test_mapper.py  test_nominal.py  test_permutations.py  test_postproc.py
