[project]
name = "localqtl"
version = "0.1.0"
description = ""
authors = [
    {name = "Kynon J Benjamin",email = "kj.benjamin90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "localqtl", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
