[tool.poetry]
name = "localqtl"
version = "0.1.0"
description = ""
authors = ["Kynon J Benjamin <kj.benjamin90@gmail.com>"]
maintainers = ["Kynon J Benjamin <kj.benjamin90@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "localqtl", from = "src"}]
keywords = [
    "genomics", "gpu", "xQTL", "qtl"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

[tool.poetry.urls]
homepage = "https://github.com/heart-gen/localQTL"
repository = "https://github.com/heart-gen/localQTL"
"Bug Tracker" = "https://github.com/heart-gen/localQTL/issues"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
dirty = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
