[tool.poetry]
name = "localqtl"
version = "0.1.0"
description = ""
authors = ["Kynon J Benjamin <kj.benjamin90@gmail.com>"]
maintainers = ["Kynon J Benjamin <kj.benjamin90@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "localqtl", from = "src"}]
keywords = [
    "genomics", "gpu", "xQTL", "qtl"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = "^2.8"
numpy = "^2.0"
scipy = "^1.16"
pandas = "^2.2"
pgenlib = "^0.93"
rfmix-reader = "^0.2"
pandas-plink = {git = "https://github.com/KrotosBenjamin/pandas-plink.git"}
py-qvalue = "^0.1"
cupy-cuda12x = "^13.6"

[tool.poetry.urls]
homepage = "https://github.com/heart-gen/localQTL"
repository = "https://github.com/heart-gen/localQTL"
"Bug Tracker" = "https://github.com/heart-gen/localQTL/issues"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
dirty = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
